[tool.poetry]
name = "prometheus-django"
version = "1.1.0"
description = "Prometheus django middleware"
authors = ["Lantum <support@lantum.com>"]
packages = [
    { include = "prometheus-django" },
    { include = "prometheus_django" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.13"
prometheus_client = "*"
django = ">=1.9.7,<=4.2"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
mypy = "0.971"
ruff = "0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py37"
show-source = true
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true


[tool.black]
target-version = ["py37"]


[tool.mypy]
ignore_missing_imports = true
exclude = [
    # Again, please stop linting virtualenvs
    # (mypy will still follow imports into the venv but this stops it auto-discovering site packages)
    "^.venv/",
    # Mypy is unhappy about this module name (which it should be!) so let's pretend it doesn't exist
    "prometheus-django",
]
